# pathomics_featuredb

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
database_scripts/: mainAggregateFeaturesJSON.py  run_docker_featuredb.sh  run_featuredb.sh
database_scripts/indexes/: db_index.js
docker-build/centos-loader-mongo/: Dockerfile
docker-build/ubuntu-loader/: Dockerfile
docker_scripts/: run_docker_create_featuredb.sh  run_docker_load_file.sh  run_docker_load_imgmeta.sh  run_docker_load_zip.sh  run_docker_mongodb_query.sh  run_docker_quip_zip.sh
gradle/wrapper/: gradle-wrapper.properties
image_metadata/: CMakeLists.txt  quip_image_metadata.c  tcga_svs_image_csv.c
python-version/: quip_csv.py  quipargs.py
python-version/sqlite/: image_metadata.py  query.py  quip_csv.py  quip_directory.py  quipargs.py  quipdb.py  sqlite_server.py
python-version/sqlite/test/: query.py
python-version/sqlite/test/python-version-all/: query.py  quip_csv.py  quipargs.py
python-version/sqlite/test/server/: run_server.sh  sqlite_server.py
query_server/: server.js
script/: read_chunkify.py  run_docker_featuredb.sh  run_featuredb.sh  run_featuredb_quip_zip.sh
script/indexes/: db_index.js
src/: build.gradle  settings.gradle
src/gradle/wrapper/: gradle-wrapper.properties
src/imagemeta/: build.gradle
src/imagemeta/src/main/java/u24/imagemeta/: ImageMeta.java
src/main/java/u24/masktopoly/: PointData.java  PolygonData.java
src/masktopoly/: README.txt  build.gradle
src/masktopoly/src/main/java/u24/masktopoly/: MaskToPoly.java
src/mongodb/: build.gradle
(+70 files in other folders)
